--- a/bridge.html
+++ b/bridge.html
@@ -42,7 +42,7 @@ box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 </header>
 
 <div class="book-cover-container mx-auto p-2">
-    <img src="https://i.imgur.com/m8tOSRX.jpg"
+    <img src="https://i.imgur.com/w0Xb7Hn.jpg"
     alt="One Quarter Equals A D$llar Blueprint Cover"
     onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+CHECK+IMGUR+LINK'"
     class="w-full h-auto object-contain rounded-lg shadow-xl">
