--- a/bridge.html
+++ b/bridge.html
@@ -18,20 +18,26 @@ color: #FFD700; /* Solid Gold */
 font-weight: 900;
 line-height: 1.1; /* Tighter line height for large text */
 }
-/* Custom input focus color */
-input:focus {
+/* Custom input focus color (using CSS for stability) */
+.form-input-style:focus {
 border-color: #FFD700 !important;
 box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
+outline: none;
 }
 /* Style to ensure the image displays as a rectangle */
 .book-cover-container {
-    height: auto; /* Allow height to adjust */
-    width: 256px; /* A fixed width (64 units in Tailwind) */
+    height: auto;
+    width: 256px; 
     max-width: 100%;
+}
+/* Fix for placeholder color on the dark background */
+input::placeholder {
+    color: #9ca3af; /* Light gray to show placeholder text */
+    opacity: 1; /* Override default opacity */
 }
 </style>
 </head>
-<body class="min-h-screen flex items-center justify-center p-4">
+<body class="min-h-screen flex items-center justify-center p-4"> 
 
 <div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
 
@@ -41,8 +47,8 @@ box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 <p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
 </header>
 
-<div class="book-cover-container mx-auto p-2">
-    <img src="https://i.imgur.com/w0Xb7Hn.jpg"
+<div class="book-cover-container mx-auto p-2" style="margin-top: 1rem; margin-bottom: 1rem;">
+    <img src="https://i.imgur.com/EwWFtC6.jpg"
     alt="One Quarter Equals A D$llar Blueprint Cover"
     onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+CHECK+IMGUR+LINK'"
     class="w-full h-auto object-contain rounded-lg shadow-xl">
@@ -54,7 +60,7 @@ box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 <span class="block">EQUALS A D$LLAR</span>
 </h1>
 <p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
-<p class="text-gray-400 text-sm mt-2">The complete Framework for Financial Fortitude.</p>
+<p class="text-gray-400 text-sm mt-2">The #1 Blueprint To Financial Freedom</p>
 </main>
 
 <footer class="mt-auto pt-8">
@@ -62,31 +68,31 @@ box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 </footer>
 </div>
 
-<div class="md:w-1/2 p-6 md:p-8 bg-gray-50 flex flex-col justify-center">
+<div class="md:w-1/2 p-6 md:p-8 bg-[#1c213d] flex flex-col justify-center text-white">
 <div id="form-content">
-<h2 class="text-2xl font-bold text-gray-900 mb-4">
+<h2 class="text-2xl font-bold text-white mb-4">
 Get Your Free Inside Look
 </h2>
-<p class="text-gray-600 mb-6">
+<p class="text-gray-300 mb-6">
 Start converting a Quarter of Effort into a Dollar of Wealth.
 </p>
 
 <form id="lead-form" class="space-y-4"
-
 action="YOUR_MAILERLITE_FORM_ACTION_URL"
 method="post">
-
-<div>
-<label for="name" class="block text-sm font-medium text-gray-700">Your Name (Optional)</label>
+<div style="margin-bottom: 1rem;">
+<label for="name" class="block text-sm font-medium text-gray-300">Your Name (Optional)</label>
 <input type="text" name="fields[name]" id="name" placeholder="John Doe"
-class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-yellow-500 transition duration-150 ease-in-out"
+style="display: block; width: 100%; padding: 10px 16px; border: 1px solid #4b5563; border-radius: 6px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); box-sizing: border-box; font-family: inherit; color: #1f2937; background-color: #ffffff;"
+class="form-input-style"
 autocomplete="name">
 </div>
 
-<div>
-<label for="email" class="block text-sm font-medium text-gray-700">Enter Your Best Email *</label>
+<div style="margin-bottom: 1rem;">
+<label for="email" class="block text-sm font-medium text-gray-300">Enter Your Best Email *</label>
 <input type="email" name="fields[email]" id="email" required placeholder="you@example.com"
-class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-yellow-500 focus:border-yellow-500 transition duration-150 ease-in-out"
+style="display: block; width: 100%; padding: 10px 16px; border: 1px solid #4b5563; border-radius: 6px; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); box-sizing: border-box; font-family: inherit; color: #1f2937; background-color: #ffffff;"
+class="form-input-style"
 autocomplete="email">
 </div>
 
@@ -103,12 +109,12 @@ We respect your privacy. Your data is 100% secure.
 </form>
 </div>
 
-<div id="thank-you-message" class="hidden text-center p-8 bg-white rounded-lg shadow-xl">
-<h2 class="text-3xl font-bold text-green-600 mb-4">Success!</h2>
-<p class="text-lg text-gray-700 mb-6">
+<div id="thank-you-message" class="hidden text-center p-8 bg-[#0d1226] rounded-lg shadow-xl text-white">
+<h2 class="text-3xl font-bold text-green-400 mb-4">Success!</h2>
+<p class="text-lg text-gray-300 mb-6">
 Thank you for your interest! Your free 'Inside Look' has been sent to your email address.
 </p>
-<p class="text-sm text-gray-500">
+<p class="text-sm text-gray-400">
 Check your inbox (and spam folder) now!
 </p>
 </div>
@@ -122,8 +128,6 @@ const form = document.getElementById('lead-form');
 const formMessage = document.getElementById('form-message');
 
 form.addEventListener('submit', () => {
-// This is a simple client-side message, the actual submission logic
-// is handled by the MailerLite 'action' URL in the form tag.
 formMessage.style.display = 'block';
 formMessage.textContent = 'Submitting... Taking you to the next step.';
 formMessage.classList.remove('text-red-500', 'text-green-600');
