--- a/index.html
+++ b/index.html
@@ -151,12 +151,17 @@
 
       <p>The Inside Look gives you the foundation. The Blueprint gives you the full system — the 3 Account Setup, Scarcity Transfers, and the MVP Money Machine.</p>
 
-      <a class="cta-btn" href="YOUR-PURCHASE-LINK">Yes, I Need The Full Blueprint Architecture Now</a>
+      <a class="cta-btn" href="
+square.link/u/RDBg3rri
+">Yes, I Need The Full Blueprint Architecture Now</a>
 
       <div class="footer">
         We respect your privacy. Your data is 100% secure.<br><br>
         If you don’t receive the email in 5 minutes, 
-        <a class="download-link" href="YOUR-DIRECT-DOWNLOAD-FILE">download the inside look now.</a>
+<a class="download-link" href="https://storage.googleapis.com/mailerlite-uploads-prod/1924779/VCMKGyj5k13j4LSnas3jv1pqwHr4lFNLkIDPTH3.pdf" download>
+    download the FREE inside look now
+</a>
+
       </div>
     </div>
 
