--- a/bridge.html
+++ b/bridge.html
@@ -34,9 +34,7 @@
 
         <header class="text-center p-8 bg-[#1c213d]">
             
-            <p class="text-sm text-gray-300 mb-4">
-                One Quarter Enterprises LLC Gold
-            </p>
+            <div class="h-10 mb-4"></div>
             <h1 class="text-3xl sm:text-4xl text-white font-extrabold uppercase mb-2">
                 <span class="title-text">ONE QUARTER EQUALS A D$LLAR</span>
             </h1>
