--- a/bridge.html
+++ b/bridge.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"> 
     <title>ONE QUARTER EQUALS A D$LLAR - Free Inside Look</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -34,7 +35,7 @@
 
         <header class="text-center p-8 bg-[#1c213d]">
             
-            <div class="h-10 mb-4"></div>
+            <div class="h-4"></div>
             <h1 class="text-3xl sm:text-4xl text-white font-extrabold uppercase mb-2">
                 <span class="title-text">ONE QUARTER EQUALS A D$LLAR</span>
             </h1>
