--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
     <div class="max-w-md w-full bg-white shadow-2xl rounded-xl overflow-hidden my-8">
 
         <header class="text-center p-8 bg-[#1c213d]">
-            <img src="https://res.cloudinary.com/dwyx97q89/image/upload/v1700251765/ONE_QUARTER_EQUALS_A_DOLLAR_brmy1l.png" 
-                 alt="One Quarter Enterprises LLC Gold Coin Logo" 
-                 class="mx-auto h-24 w-24 object-contain mb-4">
             
+            <div class="h-4"></div>
             <h1 class="text-3xl sm:text-4xl text-white font-extrabold uppercase mb-2">
                 <span class="title-text">ONE QUARTER EQUALS A D$LLAR</span>
             </h1>
