--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 
             <form id="lead-form" class="space-y-4"
                   action="https://app.mailerlite.com/webforms/submit/33979730" 
-                  method="post"
-                  target="_blank"> 
+                  method="post">
                 
                 <div class="ml-form-field-row ml-form-field-row-horizontal">
                     <label for="name" class="text-sm font-medium text-gray-700 block">Your Name (Optional)</label>
