--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="ml-form-embedWrapper embedDefault">
                             <div class="ml-form-embedBody defaultFormBody">
                                 
-                                <form class="ml-block-form" action="https://app.mailerlite.com/webforms/submit/33979730" data-code="33979730" method="post" target="_blank">
+                                <form class="ml-block-form" action="https://app.mailerlite.com/webforms/submit/33979730" data-code="33979730" method="post">
                                     <div class="ml-form-formContent">
                                         
                                         <div class="ml-form-fieldRow">
