--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
     <script>
         (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[]).push(arguments);};l=d.createElement(e);l.async=1;l.src=u;n=d.getElementsByTagName(e)[0];n.parentNode.insertBefore(l,n);})
-        // The URL below is changed to include ?v=1.1
-        (window,document,'script','https://static.mailerlite.com/js/w/ml-webforms.min.js?v=1.1','ml_webforms');ml_webforms['webforms'].push('33979730');
+        (window,document,'script','https://static.mailerlite.com/js/w/ml-webforms.min.js?v=1.1','ml_webforms'); // v=1.1 forces cache refresh
     </script>
 </head>
 <body class="flex flex-col items-center min-h-screen p-4">
@@ -133,6 +132,7 @@
                                     <div class="ml-form-recaptcha ml-validate-required my-4">
                                         <div class="g-recaptcha" data-sitekey="6Ld-I3oUAAAAAGv_f_4FhJ1GhoT2gK-uK_aN_7aM" ></div>
                                     </div>
+                                    
                                     <div class="ml-form-embedSubmit">
                                         <button type="submit" class="primary">
                                             YES, SEND ME THE FREE INSIDE LOOK
