--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <style>
         /* [ ... ALL YOUR CSS STYLING HERE ... ] */
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #0d1226; 
-            overflow-x: hidden;
-        }
+        body { font-family: 'Inter', sans-serif; background-color: #0d1226; overflow-x: hidden; }
         .main-title { color: #FFD700; font-weight: 900; }
         .ml-form-fieldRow input { border: 2px solid #555 !important; background-color: #0d1226 !important; color: #ffffff !important; padding: 0.75rem !important; border-radius: 8px !important; width: 100% !important; box-sizing: border-box !important; }
         .ml-form-fieldRow input::placeholder { color: #aaa; }
@@ -22,8 +18,11 @@
     </style>
 
     <script>
-        (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[]).push(arguments);};l=d.createElement(e);l.async=1;l.src=u;n=d.getElementsByTagName(e)[0];n.parentNode.insertBefore(l,n);})
-        (window,document,'script','https://static.mailerlite.com/js/w/ml-webforms.min.js?v=1.3','ml_webforms'); // v=1.3 to force new cache
+        (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+        .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+        n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+        (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+        ml('account', '1924779');
     </script>
 </head>
 <body class="flex flex-col items-center min-h-screen p-4">
