--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 lg:gap-12">
             
             <div class="space-y-6">
-                <h2 class="text-3xl font-extrabold text-yellow-400 uppercase">Unlocking Directional Leverage</h2>
+                <h2 class="text-3xl font-extrabold text-yellow-400 uppercase">Unlocking The Wisdom Of A Quarter</h2>
                 <p class="text-lg text-gray-300">You're one step away from getting your free **Inside Look** at the system that shifts you away from the financial anxiety of **P.O.O.R. (Passing Over Opportunities Repeatedly)**.</p>
                 <div class="p-4 bg-[#0d1226] border-l-4 border-yellow-500 rounded-md">
                     <p class="font-semibold text-white mb-2">**The Core Philosophy:**</p>
